# smoothtext

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: main.yml
src/smoothtext/: __init__.py  backend.py  formula.py  language.py  py.typed  readability.py  smoothtext.py
src/smoothtext/internal/: syllabifier.py  tokenizer.py
test/: test_backend.py  test_language.py  test_readability.py  test_smoothtext.py  test_suite.py
