[build-system]
requires = ["setuptools>=75.8.0", "unidecode>=1.3.8"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothtext"
description = "SmoothText is a Python library that aims to provide an easy-to-use interface to calculate readability statistics of texts in multiple languages and multiple formulas."

version = "0.0.10"

readme = "README.md"
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
nltk = [
    "nltk>=3.9.1"
]

[[project.authors]]
name = "Tuğrul Güngör"
email = "contact@tugrulgungor.me"

[project.urls]
Homepage = "https://github.com/tugrulgungor/smoothtext"
Issues = "https://github.com/tugrulgungor/smoothtext/issues"
