[build-system]
requires = ["pyphen>=0.17.0", "setuptools>=75.8.0", "unidecode>=1.3.8"]
build-backend = "setuptools.build_meta"

[project]
name = "smoothtext"
description = "SmoothText is a Python library for calculating readability scores of texts and statistical information for texts in multiple languages."

version = "0.0.16"

readme = "README.md"
requires-python = ">=3.10,<3.13"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
nltk = [
    "nltk>=3.9.1"
]
stanza = [
    "stanza>=1.10.1"
]

[[project.authors]]
name = "Tuğrul Güngör"
email = "contact@tugrulgungor.me"

[project.urls]
Documentation = "https://smoothtext.github.io"
Homepage = "https://github.com/smoothtext/smoothtext"
Issues = "https://github.com/smoothtext/smoothtext/issues"
Source = "https://github.com/smoothtext/smoothtext"
