[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "emoji>=2.14.1",
    "pyphen>=0.17.0",
    "setuptools>=75.8.0",
    "unidecode>=1.3.8",
]

[project]
authors = [{ name = "Tuğrul Güngör", email = "contact@tugrulgungor.me" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: German",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
]
description = "A Python library for text readability analysis, supporting multiple languages."
name = "smoothtext"
readme = "README.md"
requires-python = ">=3.10,<3.13"
keywords = [
    "readability",
    "text-processing",
    "nlp",
    "linguistics",
    "text-analysis",
    "syllables",
    "english",
    "german",
    "turkish",
    "atesman",
    "bezirci-yilmaz",
    "flesch",
    "flesch-kincaid",
    "wiener-sachtextformel",
]
license = { text = "MIT" }
version = "0.3.1"

[project.optional-dependencies]

nltk = ["nltk>=3.9.1"]

stanza = ["stanza>=1.10.1", "cmudict>=1.0.32"]

dev = ["black>=23.0.0", "isort>=5.12.0", "mypy>=1.5.0", "pip-tools>=7.3.0"]

test = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

docs = ["sphinx>=7.0.0", "sphinx-rtd-theme>=1.3.0"]

all = ["smoothtext[dev,test,docs,nltk,stanza]"]

[project.urls]
Documentation = "https://smoothtext.github.io"
Homepage = "https://github.com/smoothtext/smoothtext"
Issues = "https://github.com/smoothtext/smoothtext/issues"
Source = "https://github.com/smoothtext/smoothtext"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["smoothtext", "smoothtext.internal"]

[tool.setuptools.package-data]
smoothtext = ["py.typed"]
